<resources>
    <string name="app_name">Sistema de Notas 2025</string>

    <!-- Authentication -->
    <string name="auth_welcome">Bienvenido</string>
    <string name="auth_exit">Cerrar sesión</string>
    <string name="auth_bye">Sesión cerrada</string>

    <string name="auth_login_label">Ingreso</string>
    <string name="auth_login_title">Iniciar sesión</string>
    <string name="auth_login_action">Ingresar</string>
    <string name="auth_signup_call">Registrate</string>

    <string name="auth_signup_label">Registro</string>
    <string name="auth_signup_title">Registrarme</string>
    <string name="auth_signup_action">Crear cuenta</string>
    <string name="auth_login_call">Tengo cuenta</string>

    <string name="auth_alias_hint">Nombres</string>
    <string name="auth_email_hint">Correo electrónico</string>
    <string name="auth_pass_hint">Contraseña</string>
    <string name="auth_check_hint">Confirmar contraseña</string>

    <string name="auth_alias_err">Ingrese nombre</string>
    <string name="auth_email_err">Ingrese correo</string>
    <string name="auth_pass_err">Ingrese contraseña</string>
    <string name="auth_check_err">Las contraseñas no coinciden</string>

    <!-- Students -->
    <string name="score_create">Ingresar registro</string>
    <string name="score_created">Registro ingresado</string>
    <string name="score_edit">Editar registro</string>
    <string name="score_edited">Registro editado</string>
    <string name="score_delete">Eliminar registro</string>
    <string name="score_deleted">Registro eliminado</string>

    <string name="score_line1"><b>(%1$s)</b>, %2$s %3$s</string>
    <string name="score_line2"><b>%1$s</b>, %2$.2f</string>

    <string name="score_name">Nombre</string>
    <string name="score_lastname">Apellido</string>
    <string name="score_grade">Grado:</string>
    <string name="score_subject">Materia:</string>
    <string name="score_score">Nota final</string>

    <string name="score_name_err">Ingrese el Nombre</string>
    <string name="score_lastname_err">Ingrese el Apellido</string>
    <string name="score_grade_err">Seleccione el Grado</string>
    <string name="score_subject_err">Seleccione la Materia</string>
    <string name="score_score_err">La nota debe estar entre 0 y 10</string>

    <string-array name="score_grades">
        <item>Primero</item>
        <item>Segundo</item>
        <item>Tercero</item>
        <item>Cuarto</item>
        <item>Quinto</item>
        <item>Sexto</item>
        <item>Septimo</item>
        <item>Octavo</item>
        <item>Noveno</item>
    </string-array>
    <string-array name="score_subjects">
        <item>Matematicas</item>
        <item>Lenguaje</item>
        <item>Sociales</item>
        <item>Ciencias</item>
        <item>Ingles</item>
    </string-array>
</resources>